Jun 16, 2008 - chris
o Bugfix: when creating several Databases in an Environment, and recovery
    was enabled, each Database created its own log object and the log
    was corrupted

Jun 03, 2008 - chris
o Fixed typo in hamsterdb.h documentation - HAM_INV_LOG_FILE_HEADER is
    actually called HAM_LOG_INV_FILE_HEADER

May 25, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.3

May 24, 2008 - chris
o Unittests no longer fail when compiled without encryption, compression
	or internal functions
o Moved ham_get_flags from ham/hamsterdb_int.h to ham/hamsterdb.h

May 22, 2008 - chris
o Log files now respect the file filters - i.e. if aes encryption is enabled,
	the log file is also encrypted

May 21, 2008 - chris
o Finalized the implementation of logging and recovery; can be enabled with
	HAM_ENABLE_RECOVERY

May 10, 2008 - chris
o The flag HAM_DISABLE_FREELIST_FLUSH is now deprecated; freelist operations
    are no longer immediately flushed. 

May 10, 2008 - chris
o minor documentation fixes (mainly grammar releated) in ham/hamsterdb.h

May 09, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.2

May 06, 2008 - chris
o added new API function ham_get_flags()

May 06, 2008 - chris
o When creating an environment with ham_env_create_ex and a custom
    page size, the page size was not stored correctly
o An assert was sometimes triggered when closing a Database which was part
    of an Environment

Apr 25, 2008 - chris
o bugfix: when a cursor is overwritten (ham_cursor_overwrite), the modified
    page was never released from the cache

Mar 09, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.1

Feb 19, 2008 - chris
o added a macro HAM_CALLCONV to set the calling convention; per default, 
	it's empty and therefore CDECL is used

Feb 10, 2008 - chris