@@ -179,6 +179,8 @@ class HighLevelTxnTest : public CppUnit::TestFixture
     CPPUNIT_TEST      (autoAbortEnvironment2Test);
     CPPUNIT_TEST      (environmentTest);
     CPPUNIT_TEST      (rollbackBigBlobTest);
+    CPPUNIT_TEST      (rollbackHugeBlobTest);
+    CPPUNIT_TEST      (rollbackNormalBlobTest);
     CPPUNIT_TEST_SUITE_END();
 
 protected:
@@ -328,6 +330,10 @@ public:
         CPPUNIT_ASSERT_EQUAL(HAM_KEY_NOT_FOUND, 
                 ham_find(db2, 0, &key, &rec, 0));
         CPPUNIT_ASSERT_EQUAL(0, ham_env_close(env, 0));
+
+        ham_env_delete(env);
+        ham_delete(db1);
+        ham_delete(db2);
     }
 
     void autoAbortEnvironment2Test(void)
@@ -435,6 +441,51 @@ public:
         CPPUNIT_ASSERT_EQUAL(0, ham_txn_abort(txn, 0));
 
         CPPUNIT_ASSERT(freel_alloc_area(m_db, sizeof(buffer))); 
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(m_db, 0));
+    }
+
+    void rollbackHugeBlobTest(void)
+    {
+        ham_txn_t *txn;
+        ham_key_t key;
+        ham_record_t rec;
+        ham_size_t ps=os_get_pagesize();
+        ham_u8_t *buffer=(ham_u8_t *)malloc(ps*2);
+        ::memset(&key, 0, sizeof(key));
+        ::memset(&rec, 0, sizeof(rec));
+        rec.data=&buffer[0];
+        rec.size=ps*2;
+
+        CPPUNIT_ASSERT_EQUAL(0, 
+                ham_create(m_db, ".test", HAM_ENABLE_TRANSACTIONS, 0644));
+        CPPUNIT_ASSERT_EQUAL(0, ham_txn_begin(&txn, m_db, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_insert(m_db, txn, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_txn_abort(txn, 0));
+
+        CPPUNIT_ASSERT(freel_alloc_area(m_db, ps*2));
+        CPPUNIT_ASSERT_EQUAL(0, ham_close(m_db, 0));
+
+        free(buffer);
+    }
+
+    void rollbackNormalBlobTest(void)
+    {
+        ham_txn_t *txn;
+        ham_key_t key;
+        ham_record_t rec;
+        ham_u8_t buffer[64];
+        ::memset(&key, 0, sizeof(key));
+        ::memset(&rec, 0, sizeof(rec));
+        rec.data=&buffer[0];
+        rec.size=sizeof(buffer);
+
+        CPPUNIT_ASSERT_EQUAL(0, 
+                ham_create(m_db, ".test", HAM_ENABLE_TRANSACTIONS, 0644));
+        CPPUNIT_ASSERT_EQUAL(0, ham_txn_begin(&txn, m_db, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_insert(m_db, txn, &key, &rec, 0));
+        CPPUNIT_ASSERT_EQUAL(0, ham_txn_abort(txn, 0));
+
+        CPPUNIT_ASSERT(freel_alloc_area(m_db, sizeof(buffer)));
         CPPUNIT_ASSERT_EQUAL(0, ham_close(m_db, 0));
     }
 };
